minors: deixando codigo mais facil pra colocar no blog